--- a/pages/payroll_form.html
+++ b/pages/payroll_form.html
@@ -15,7 +15,7 @@
 <body>
   <header class="header-content header">
     <div class="logo-content">
-      <img src="../assets/images/logo.png">
+      <a href="./home.html" class="Button"><img src="../assets/images/logo.png"></a>
       <div>
         <span class="emp-text">EMPLOYEE</span><br>
         <span class="emp-text emp-payroll">PAYROLL</span>
