--- a/EmployeePayRoll-JsonServer/pages/payroll_form.html
+++ b/EmployeePayRoll-JsonServer/pages/payroll_form.html
@@ -6,8 +6,9 @@
       <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="../css/payroll_form.css">
       <title>Employee payroll form</title>
-      <script src="../js/EmployeePayroll.js"></script>
       <script src="../js/payroll_form.js"></script>
+      <script src="../js/utility.js"></script>
+      <script src="../js/site_properties.js"></script>
     </head>
     <body>
       <header class="header-content header">
@@ -20,7 +21,7 @@
         </div>
       </header>
       <div class="form-content">
-        <form class="form" action="#" onreset="resetForm()" onsubmit="save()">
+        <form class="form" action="#" onreset="resetForm()" onsubmit="save(event)">
           <div class="form-head">Employee Payroll form</div>
           <div class="row-content">
             <label class="label text" for="name">Name</label>
@@ -89,7 +90,7 @@
           </div>
           <div class="row-content">
             <label class="label text" for="startDate">Start Date</label>
-            <div>
+            <div id="date">
               <select id="day" name="Day">
                 <option value="1">1</option>
                 <option value="2">2</option>
@@ -144,6 +145,7 @@
                 <option value="2019">2019</option>
                 <option value="2018">2018</option>
               </select>
+              <error-output class="date-error" for="startDate"></error-output>
             </div>
           </div>
           <div class="row-content">
@@ -151,7 +153,7 @@
             <textarea class="input" id="notes" name="Notes" style="height: 100px;"></textarea>
           </div>
           <div class="buttonParent">
-            <a href="./payroll_form.html" class="resetButton button cancelButton">Cancel</a>
+            <a href="./home.html" class="resetButton button cancelButton">Cancel</a>
             <div class="submit-reset">
               <button type="submit" class="button submitButton" id="submitButton">Submit</button>
               <button type="reset" class="resetButton button">Reset</button>
